--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,12 +1,12 @@
 [font]
-size = 15.0
+size = 12.0
 normal = { family = "Firacode", style = "Semibold" }
 
 [window]
-padding = { x = 10, y = 10 }
+padding = { x = 15, y = 15 }
 
 [cursor]
-style = { shape = "Block" }
+style = { shape = "Beam" }
 
 # Default colors
 [colors.primary]
