--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [font]
 size = 12.0
-normal = { family = "Firacode", style = "Semibold" }
+normal = { family = "Firacode", style = "SemiBold" }
 
 [window]
 padding = { x = 15, y = 15 }
