--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -14,7 +14,7 @@ inactive-opacity-override = false;
 
 blur-background = false;
 
-fading = true;
+fading = false;
 fade-delta = 2;
 fade-exclude = [ ];
 
