--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,7 +14,7 @@ inactive-opacity-override = false;
 
 blur-background = false;
 
-fading = false;
+fading = true;
 fade-delta = 2;
 fade-exclude = [ ];
 
