--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -12,32 +12,11 @@ active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
 
-blur-background = false;
-
-fading = true;
-fade-delta = 2;
-fade-exclude = [ ];
-
-log-level = "warn";
-
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
-detect-rounded-corners = true;
-detect-client-opacity = true;
-
+backend = "glx";
 vsync = true;
+glx-use-copysubbuffer-mesa = true;
 
-detect-transient = true;
-detect-client-leader = true;
-invert-color-include = [ ];
-
-resize-damage = 2;
-
-wintypes:
-{
-	dock = { shadow = false; }
-	dnd = { shadow = false; }
-	popup_menu = { opacity = 1; }
-	dropdown_menu = { opacity = 1; }
-};
+glx-copy-from-front = true;
+glx-swap-method = 2;
+xrender-sync = true;
+xrender-sync-fence = true;
