--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,6 @@
 ###    AUTOSTART    ###
 #######################
 exec --no-startup-id xsetroot -cursor_name left_ptr
-# exec --no-startup-id xwallpaper --zoom $HOME/dotfiles/wallpapers/kamp.png
 exec --no-startup-id xwallpaper --zoom $HOME/dotfiles/wallpapers/dark.png
 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- $HOME/dotfiles/scripts/lock.sh
@@ -87,8 +86,7 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
+bindsym $mod+Shift+r exec $HOME/dotfiles/scripts/restart.sh
 
 bindsym $mod+r mode "resize"
 mode "resize" {
