--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -3,7 +3,7 @@
 ##################
 [font]
 size = 10
-normal = { family = "FiraCode NerdFont", style = "SemiBold" }
+normal = { family = "FiraCode", style = "SemiBold" }
 
 ####################
 ###    WINDOW    ###
