--- a/i3/config
+++ b/i3/config
@@ -33,8 +33,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q sset Master 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 5%-
 bindsym XF86AudioMute exec --no-startup-id amixer -q sset Master toggle
 
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +25%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 25%-
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +15%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 15%-
 
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -86,7 +86,7 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-bindsym $mod+Shift+r exec $HOME/dotfiles/scripts/restart.sh
+bindsym $mod+Shift+r exec i3-msg restart && eww reload
 
 bindsym $mod+r mode "resize"
 mode "resize" {
