--- a/i3/config
+++ b/i3/config
@@ -4,7 +4,7 @@
 exec --no-startup-id xsetroot -cursor_name left_ptr
 exec --no-startup-id xwallpaper --zoom $HOME/dotfiles/wallpapers/dark.png
 
-exec --no-startup-id xss-lock --transfer-sleep-lock -- $HOME/dotfiles/scripts/lock.sh
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- $HOME/dotfiles/scripts/lock.sh
 exec --no-startup-id nm-applet
 exec --no-startup-id picom
 exec --no-startup-id eww open bar
