--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,25 +1,17 @@
-##################
-###    FONT    ###
-##################
+# font
 [font]
 size = 12
 normal = { family = "Mononoki", style = "Bold" }
 
-####################
-###    WINDOW    ###
-####################
+# window
 [window]
 padding = { x = 10, y = 10 }
 
-####################
-###    CURSOR    ###
-####################
+# cursor
 [cursor]
 style = { shape = "Beam" }
 
-####################
-###    COLORS    ###
-####################
+# colorscheme
 [colors.primary]
 background = '#282828'
 foreground = '#ebdbb2'
